<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04885A"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/design_default_color_primary_dark"
            tools:srcCompat="@color/design_default_color_primary_dark" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/blood" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <LinearLayout
            android:id="@+id/nameZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/accountName"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ageZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_age"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/accountAge"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/specZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_specialization"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/accountSpecialization"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statusZone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_status"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/accountStatus"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/moodZone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_mood"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/accountMood"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary_dark"
            android:gravity="center"
            android:text="Фото"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary_dark"
            android:gravity="center"
            android:text="Проекты"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary_dark"
            android:gravity="center"
            android:text="Достижения"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/silv" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/lol" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/pepe" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/hack" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/clown" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/bread" />

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>